--- a/TrueCrypt Mounter/VeracryptMounter.csproj
+++ b/TrueCrypt Mounter/VeracryptMounter.csproj
@@ -153,6 +153,12 @@
     <Compile Include="SelectPartition.Designer.cs">
       <DependentUpon>SelectPartition.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShowCommandWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowCommandWindow.Designer.cs">
+      <DependentUpon>ShowCommandWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="StringCipher.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="ConfigTrm.cs" />
@@ -223,6 +229,9 @@
     <EmbeddedResource Include="SelectPartition.resx">
       <DependentUpon>SelectPartition.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShowCommandWindow.resx">
+      <DependentUpon>ShowCommandWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Version.resx">
       <DependentUpon>Version.cs</DependentUpon>
